tests/paczka1/fuzzy1/12992089.err
Error in line 4: HoxeqCtp A548 69,8
Error in line 34: 8nFFCE S776 24,3
